TBA  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.2
	* Fixed recording filename on instant record
	* Fixed mute when changing channels
	* Moved PAT/PMT write timer to channel stream class
	* Added time to status bar

2010-07-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.1
	* Fixed issue with hyphens in man page
	* Made window hide more responsive
	* Treating a single hyphen in the EPG subtitle as blank
	* Added Watch Now button to EPG event dialog
	* Status icon now shows SR description rather than channel description for SRs
	* Added CZ scan range (patch from Luboš Staněk)
	* Fixed issues with non-translatable strings in UI file (patch from Luboš Staněk)
	* EPG thread now stays running when no streams are in running
	* Better message when unable to talk to gnome-screensaver
	* Scheduled recording manager should now only save if dirty
	* Preferred language is now an entry
	* Fixed change channel when scheduled recording starts on another transponder

2010-07-04  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.0
	* UI change to reduce vertical requirement
	* Removed fullscreen bug workaround
	* Switched to a 2 mode interface
	* Added volume control
	* Fix for auto subtitle/audio stream selection
	* Added --devices command line option
	* Added auto record feature
	* Channels/EPG events no longer save if not dirty
	* Display stream is stopped when main window is closed
	* Fix to only select first preferred language stream
	* Added description to EPG tooltips

2010-06-14  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.6
	* Clearing demuxers on channel stream destroy
	* Added signal strength column to scan dialog
	* Added rename option to channel conflict actions
	* Added repeat option for channel conflict
	* Added command line option for no screensaver inhibit
	* Put command line parse in try/catch so command line errors get reported
	* Auto audio/subtitle selection does not delay any more
	* Selected better default for epg_page_size
