@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2010-07-25" "1.3.2" "Me TV Manual"
+.TH "ME TV" 1 "2010-08-04" "1.3.2" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
@@ -18,7 +18,7 @@ me-tv \- a digital television (DVB) viewer for GNOME
 .I [--display=DISPLAY]
 
 .SH DESCRIPTION
-Me TV is a GNOME desktop application for watching digital television services 
+Me TV is a GTK desktop application for watching digital television services 
 that use the DVB standard.  Me TV works with DVB-T/C/S and ATSC cards that have 
 kernel driver support.
 
